Fix controller sanitizer with sup ressions.
Some cleanup while trying to remove the leaks correctly.

--- a/controller/CMakeLists.txt
+++ b/controller/CMakeLists.txt
@@ -21,9 +21,6 @@ set(CONTROLLER_HEADERS
 # Find required packages
 find_package(PkgConfig REQUIRED)
 
-# Find D-Bus
-pkg_check_modules(DBUS REQUIRED dbus-1)
-
 pkg_check_modules(GST REQUIRED
     gstreamer-1.0
     gstreamer-app-1.0
@@ -65,8 +62,7 @@ target_include_directories(controller PRIVATE
     ${SDL2_INCLUDE_DIRS}
     ${LIBDRM_INCLUDE_DIRS}
     ${Boost_INCLUDE_DIRS}
-    ${DBUS_INCLUDE_DIRS}
-    ${IMGUI_DIR}
+${IMGUI_DIR}
     ${IMGUI_DIR}/backends
 )
 
@@ -78,15 +74,15 @@ target_link_libraries(controller PRIVATE
     ${SDL2_IMAGE_LIBRARIES}
     ${LIBDRM_LIBRARIES}
     ${Boost_LIBRARIES}
-    ${DBUS_LIBRARIES}
 )
 
-# Add compile definitions and options
+# Configure sanitizer suppressions
+set(SANITIZER_IGNORELIST_FILE "${CMAKE_CURRENT_SOURCE_DIR}/sanitizer_suppressions.txt")
+
 target_compile_options(controller PRIVATE
     -funsigned-char
     -Werror
     ${GST_CFLAGS_OTHER}
-    ${DBUS_CFLAGS_OTHER}
 )
 
 # Install target
